MODSOURCE-803: DuplicateException is thrown when saving batch of Bib records for linked Authority (#658)
* MODSOURCE-803: DuplicateException is thrown when saving batch of Bib records for linked Authority

(cherry picked from commit d1cb6db2c374dc3e043738dc01b7e00de51d0bff)